# researchpaper

./: .bandit  .dockerignore  .flake8  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci-cd.yml  deploy.yml
backend/: requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  notes.py  papers.py
backend/app/services/: doi_service.py  paper_service.py  storage_service.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CitationViewer.jsx  ConfirmModal.jsx  LoadingSpinner.jsx  Navbar.jsx  NoteEditor.jsx  NoteItem.jsx  PaperCard.jsx  SearchBar.jsx  StatsCard.jsx  StatusBadge.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AddPaper.jsx  Dashboard.jsx  Login.jsx  PaperDetails.jsx  SearchResults.jsx  Signup.jsx
frontend/src/services/: api.js
researchpaperlib/: README.md  pyproject.toml
researchpaperlib/researchpaperlib/: __init__.py  citation_generator.py  doi_resolver.py  exceptions.py  models.py  paper_validator.py
researchpaperlib/tests/: test_citation_generator.py  test_doi_resolver.py  test_exceptions.py  test_models.py  test_paper_validator.py
